--- a/src/html/gendec/testes.gendec.html
+++ b/src/html/gendec/testes.gendec.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="../bibliotecas/govbr-ds/core-lite.css" />
 
     <!--- Design próprio CSS -->
-    <link rel="stylesheet" href="./css/design.css" />
+    <link rel="stylesheet" href="./design_autorregularizacao.css" />
 
     <!--- Ícones Font Awesome - Versão 6.5.1 -->
     <link rel="stylesheet" href="../icones/css/fontawesome.css" />
