Select funcionando parcialmente dentro das tabelas

--- a/src/html/autorregularizacao/autorregularizacao_novo_padrao.html
+++ b/src/html/autorregularizacao/autorregularizacao_novo_padrao.html
@@ -397,6 +397,7 @@
     <script src="./bibliotecas/govbr-ds/core.min.js" type="module"></script>
     <script src="./tabela_debitos_autorregularizar/tabela_debitos_autorregularizar.js" type="module"></script>
     <script src="./js/select.js" type="module"></script>
+    <script src="./componentes/codigos_receita/codigos_receita.js" type="module"></script>
 
   </body>
 </html>
