--- a/src/html/siscaer/componentes/dados_pessoais/dados_pessoais.html
+++ b/src/html/siscaer/componentes/dados_pessoais/dados_pessoais.html
@@ -98,6 +98,12 @@
           <fieldset>
             <!--<legend>Outros Dados (Legend)</legend>-->
             <div class="row">
+              <div class="col-md-6 mb-3">
+                 <!--<div class="br-input">-->
+                  <label for="brasileiroNaturalizado">Brasileiro Naturalizado</label>
+                  <input type="checkbox" id="brasileiroNaturalizado">
+                <!--</div>-->
+              </div>
               <div class="col-md-10 mb-3">
                 <div class="br-input">
                   <label for="nacionalidade">Nacionalidade:</label><br>
@@ -239,6 +245,5 @@
           </fieldset>
         </div>
       </div>
-
   </fieldset>
 </div>
