Site Siscaer - Resolvendo problema de adicionar com js

--- a/src/html/siscaer/componentes/endereco_contato/endereco_contato.html
+++ b/src/html/siscaer/componentes/endereco_contato/endereco_contato.html
@@ -5,7 +5,7 @@
         <i class="fa-solid fa-address-book" aria-hidden="true"></i>
       </span>Endereço e Contato
     </legend>
-    <template class="endereco">
+    <template id="template_endereco">
       
       <div class="row mt-5">
         <div class="col-sm">
@@ -228,7 +228,8 @@
 
         </div>
 
-            <div class="col-sm">
+            
+          <div class="col-sm">           
               <fieldset>
                 <!--<legend>Nome Completo (Legend)</legend>-->
                 <div class="row">
@@ -237,12 +238,12 @@
                     <input id="nome-referencia1" placeholder="Insira o nome completo" type="text" />
                     </div>
                   </div>
-                  <div class="col-md-10">
+                  <!--<div class="col-md-10">
                     <div class="br-input">
                       <label for="nome-referencia2">Nome completo: </label>
                       <input id="nome-referencia2"type="text" placeholder="Insira o nome completo"/>
                     </div>
-                  </div>
+                  </div>-->
                 </div>
               </fieldset>
             </div>
@@ -256,12 +257,12 @@
                       <input id="telefone-referencia2" type="number" placeholder="Insira seu número"/>
                     </div>
                   </div>
-                  <div class="col-md-10">
+                  <!--<div class="col-md-10">
                     <div class="br-input">
                       <label for="telefone-referencia1">Telefone: </label>
                       <input id="telefone-referencia1" type="number" placeholder="Insira seu número"/>
                     </div>
-                  </div>
+                  </div>-->
                 </div>
               </fieldset>
             </div>
@@ -281,7 +282,7 @@
                       </select>
                     </div>
                   </div>
-                  <div class="col-md-10">
+                 <!-- <div class="col-md-10">
                     <div class="br-input">
                       <label for="vinculo2">Vínculo:</label><br>
                       <select id="vinculo2" required>
@@ -292,7 +293,7 @@
                         <option value="outro">Outro</option>
                       </select>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </fieldset>
             </div>
