--- a/src/html/autorregularizacao/autorregularizacao_novo_padrao.html
+++ b/src/html/autorregularizacao/autorregularizacao_novo_padrao.html
@@ -39,7 +39,7 @@
       <br-cabecalho></br-cabecalho>
 
       <!--CONTEÚDO-->
-      <main class="d-flex flex-fill mb-5" id="main">
+      <main class="d-flex flex-fill mb-5" id="main">        
         <div class="container-xl">
           <div class="row">
             <div class="col mb-5x">
@@ -50,34 +50,9 @@
                 <!--SECAO DEBITOS A AUTORREGULARIZAR-->
                 <div id="debitos" class="mt-10x">
                   <div class="text-center">
-                    <h2>Débitos a Autorregularizar</h2>
+                    <h2>Débitos a Autorregularizar</h2>                    
                   </div>
-                  <div class="br-table">
-                    <table id="tabelaDebitos">
-                      <thead>
-                        <tr>
-                          <th id="tituloTipoDeclaracao" class="text-center">Tipo de declaração</th>
-                          <th id="tituloDataEntrega" class="text-center">Data da entrega</th>
-                          <th id="tituloCpfCnpjDebito" class="text-center">CPF/CNPJ do débito</th>
-                          <th id="tituloNumeroProcesso" class="text-center">Nº do processo DEBCAD</th>
-                          <th id="tituloCodigoReceita" class="text-center">Código receita</th>
-                          <th id="tituloPeriodoApuracao" class="text-center">Período de apuração</th>
-                          <th id="tituloVencimentoTributo" class="text-center">Vencimento do tributo</th>
-                          <th id="tituloValorDebito" class="text-center ">Valor (R$)</th>
-                          <th id="tituloCibCnoCnpjPrestador" class="text-center ">CIB/CNO/CNPJ Prestador</th>
-                          <th id="tituloAcoes" class="text-center ">Ações</th>
-                        </tr>
-                      </thead>
-                      <tbody id="tabelaDebitosBody">                        
-                      </tbody>
-                    </table>
-
-                    <!--BOTÕES ADICIONAR DEBITO-->
-                    <div id="btnDebito" class="text-center my-5 esconder">
-                      <button id="btnIncluirNovoDebito" class="br-button secondary mr-3">Incluir novo débito</button>
-                    </div>
-
-                  </div>
+                  <br-tabela-debitos></br-tabela-debitos>
                 </div>
 
                 <!--FIM DA SECAO DEBITOS A AUTORREGULARIZAR-->
@@ -395,9 +370,7 @@
     <script src="./js/main.js" type="module"></script>
     <script src="./bibliotecas/govbr-ds/core.js" type="module"></script>
     <script src="./bibliotecas/govbr-ds/core.min.js" type="module"></script>
-    <script src="./linha_tabela_debitos/linha_tabela_debitos.js" type="module"></script>
-    <script src="./js/select.js" type="module"></script>
-    <script src="./componentes/codigos_receita/codigos_receita.js" type="module"></script>
+    <script src="./tabela_debitos/tabela_debitos.js" type="module"></script>     
 
   </body>
 </html>
