Modificando web componentes e id's do select

--- a/src/html/autorregularizacao/componentes/select_codigos_receita/select_codigos_receita.html
+++ b/src/html/autorregularizacao/componentes/select_codigos_receita/select_codigos_receita.html
@@ -1,5 +1,5 @@
 
-<div class="br-select">
+<div class="br-select" id="selectCodigosReceitas">
     
     <div class="br-input">
       <input id="select-simple" class="text-center" type="text" placeholder="Selecione"/>
