--- a/src/html/autorregularizacao/tabela_debitos/tabela_debitos.html
+++ b/src/html/autorregularizacao/tabela_debitos/tabela_debitos.html
@@ -2,7 +2,7 @@
 <template id="template_linha_tabela_debitos">
   <tr>  
     <td id="tipoDeclaracao" class="col-sm-1 col-md-2 col-lg-1 mb-3 p-0">
-      <div class="br-select">
+      <div class="br-select" id="selectTipoDeclaracao">
         <div class="br-input">
           <input id="select-simple" class="text-center" type="text" placeholder="Selecione"/>
           <button class="br-button" type="button" aria-label="Exibir lista" tabindex="-1" data-trigger="data-trigger"><i class="fas fa-angle-down" aria-hidden="true"></i>
