--- a/src/html/siscaer/componentes/endereco_contato/endereco_contato.html
+++ b/src/html/siscaer/componentes/endereco_contato/endereco_contato.html
@@ -283,10 +283,10 @@
             <fieldset>
               <div class="row">
                 <div class="col-md-10 mb-3">
-                  <button class="br-button circle secondary small" type="button" aria-label="Ícone ilustrativo">
+                  <button class="br-button lixeira" type="button" aria-label="Ícone ilustrativo">
                     <div class="menu-item divider" href="#" id="remover_referencia" role="treeitem">
                       <span class="icon" style="justify-content: right;">
-                        <i class="fa fa-minus" arial-hidden="true"></i>
+                        <i class="fa fa-trash-alt" arial-hidden="true"></i>
                       </span>
                       <span class="content"></span>
                     </div>
