--- a/src/html/siscaer/componentes/endereco_contato/endereco_contato.html
+++ b/src/html/siscaer/componentes/endereco_contato/endereco_contato.html
@@ -172,7 +172,7 @@
             </div>
             <div class="col-md-10">
               <div class="br-input">
-                <label for="uf_endereco">UF:</label>
+                <label for="uf_endereco">UF:</label><br>
                 <select id="uf_endereco" required>
                   <option value="" disabled selected>Selecione</option>
                   <option value="Acre">AC</option>
@@ -214,8 +214,7 @@
             <div class="col-md-10">
               <div class="br-input">
                 <label for="telefone">Telefone:</label><br>
-                <input type="number" id="telefone" maxlength="14" name="telefone" pattern="[0-9]{2}-[0-9]{5}-[0-9]{4}"
-                  required>
+                <input type="number" id="telefone" maxlength="14" name="telefone" pattern="[0-9]{2}-[0-9]{5}-[0-9]{4}" placeholder="Insira seu número" required>
               </div>
             </div>
           </div>
