Adicionando botões site siscar

--- a/src/html/siscaer/componentes/dados_pessoais/dados_pessoais.html
+++ b/src/html/siscaer/componentes/dados_pessoais/dados_pessoais.html
@@ -253,5 +253,13 @@
         </div>
       </template>
     </div>
+
+    <div class="p-3">
+      <button class="br-button block primary mb-3" type="button">Primário
+      </button>
+      <button class="br-button block secondary mb-3" type="button">Secundário
+      </button>
+    </div>
+
   </fieldset>
 </div>
