--- a/src/html/siscaer/index.html
+++ b/src/html/siscaer/index.html
@@ -148,6 +148,16 @@
     </div> -->
     </div>
 
+
+    <div class="p-3">
+      <button class="br-button primary mr-3" type="button">Salvar
+      </button>
+      <button class="br-button secondary mr-3" type="button">Baixar<i class="fa-solid fa-download" aria-hidden="true""></i>
+      </button>
+      <button class="br-button" type="button">Cancelar
+      </button>
+    </div>
+
     <br-rodape></br-rodape>
   </div>
 
